tests/snapshots/write_stdin_batch__write_stdin_drives_browser.snap
---
source: tests/write_stdin_batch.rs
expression: rendered
---
== session: browser_queue ==
-- step 1 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "f <- function() { browser(); x <- 1; x <- x + 1; x }\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "> "
    }
  ]
}
-- step 2 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "f()\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "Called from: f()"
    },
    {
      "type": "text",
      "text": "Browse[1]> "
    }
  ]
}
-- step 3 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "n\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "debug at #1: x <- 1"
    },
    {
      "type": "text",
      "text": "Browse[1]> "
    }
  ]
}
-- step 4 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "n\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "debug at #1: x <- x + 1"
    },
    {
      "type": "text",
      "text": "Browse[1]> "
    }
  ]
}
-- step 5 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "c\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "[1] 2"
    },
    {
      "type": "text",
      "text": "> "
    }
  ]
}
